Added TweetInputField and EditProfileModal components.

--- a/client/src/pages/UserPage/UserPage.scss
+++ b/client/src/pages/UserPage/UserPage.scss
@@ -2,6 +2,7 @@
   &__header {
     height: 200px;
     background-color: #c4cfd6;
+    position: relative;
   }
   &__info {
     margin-top: -70px;
