--- a/client/src/components/EditProfileModal/EditProfileModalStyles.scss
+++ b/client/src/components/EditProfileModal/EditProfileModalStyles.scss
@@ -2,10 +2,35 @@
     height: 200px;
     background-color: #B2B2B2;
     position: relative;
+    z-index: 1;
     &_image {
+        z-index: 5;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
+}
+
+.edit_avatar {
+    position: relative;
+    margin-top: -50px;
+    padding: 20px;
+    padding-top: 0;
+    font-size: 16px;
+
+    .MuiAvatar-root {
+        z-index: 4;
+        width: 120px !important;
+        height: 120px !important;
+        border: 4px solid white;
+    }
+}
+
+.wallpaper_img {
+    object-fit:cover;
+    position: absolute;
+    z-index: 1;
+    width: 583px;
+    height: 200px;
 }
