--- a/client/src/pages/UserPage/UserPage.scss
+++ b/client/src/pages/UserPage/UserPage.scss
@@ -3,6 +3,12 @@
     height: 200px;
     background-color: #c4cfd6;
     position: relative;
+    &__img {
+      object-fit:cover;
+      position: absolute;
+      width: 601px;
+      height: 200px;
+    }
   }
   &__info {
     margin-top: -70px;
@@ -36,6 +42,12 @@
 
     &-details {
       color: #5b7083;
+    }
+
+    &-icon {
+      vertical-align: bottom;
+      margin-right: 4px;
+      font-size: 20px;
     }
 
     &-username {
